# SongLister

./: AngabeGr1.md  CMakeLists.txt  README.md  SongList.csv  SongListBackup.csv_Backup.csv  SongListCCFree.csv  ToDo.md  main.c  songs.c  songs.h
utils/: displayOptions.c  displayOptions.h  menues.c  menues.h  music.c  music.h  utils.c  utils.h
